correct z-index for LogoAnimation

--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 0;
+  z-index: -1;
   overflow: hidden;
 }
 .logos-container img {
